[metadata]
name = schedlock
version = attr: schedlock.__version__
description = A lightweight Python library for distributed cron-style job locking using Redis or file backends.
long_description = file: README.md
long_description_content_type = text/markdown
author = schedlock contributors
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: System :: Distributed Computing
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.8
install_requires =
    redis>=4.0

[options.extras_require]
dev =
    pytest
    pytest-cov
    fakeredis

[options.entry_points]
console_scripts =
    schedlock = schedlock.cli:main

[tool:pytest]
testpaths = tests
addopts = --tb=short

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist
